--- a/SocialMedia/Views/Home/KayitOl.cshtml
+++ b/SocialMedia/Views/Home/KayitOl.cshtml
@@ -44,8 +44,7 @@
                         <input type="password" name="Sifre" required />
                         <label>Şifre</label>
                     </div>
-
-                    <button type="submit" class="btn">Kayıt Ol</button>
+                    <button type="submit" class="btn" onclick="alarm()">Kayıt Ol</button>
                 </form>
             </div>
         </div>
