--- a/SocialMedia/Views/Home/Profil.cshtml
+++ b/SocialMedia/Views/Home/Profil.cshtml
@@ -29,6 +29,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                
             }
 
         .profile-info {
@@ -129,7 +130,7 @@
             <div class="form-box login">
     <div class="profile">
         <div class="profile-image">
-            <img src="profile.jpg" alt="Profil Resmi">
+        <img src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Profil Resmi">
         </div>
         <div class="profile-info">
             <div class="profile-name">@ViewBag.profilAdi</div>
