--- a/SocialMedia/Views/Home/Hakkimda.cshtml
+++ b/SocialMedia/Views/Home/Hakkimda.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -15,7 +14,7 @@
 <body>
     <!--Üst Menü-->
     <header>
-        <h2 class="logo" style="text-align:center">Hakkımda</h2>
+        <h2 class="logo" style="text-align:center">Hakkımda123</h2>
 
         <nav class="navigation">
             <a href="/Home/Login">Ana Sayfa</a>
