--- a/SocialMedia/Views/Home/Profil.cshtml
+++ b/SocialMedia/Views/Home/Profil.cshtml
@@ -1,20 +1,25 @@
-﻿@using EntityLayer
- @model List<Social>
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
     <!--Style Sheet-->
     <link href="~/stylesheet.css" rel="stylesheet" />
+    <!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <style>
         /* Profil bölümü */
         .profile {
             max-width: 800px;
             margin: 20px auto;
-            background-color: #fff;
             padding: 20px;
+        }
+
+        .profile-image-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
         }
 
         .profile-image {
@@ -22,14 +27,12 @@
             height: 150px;
             border-radius: 50%;
             overflow: hidden;
-            margin-bottom: 20px;
         }
 
             .profile-image img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                
             }
 
         .profile-info {
@@ -43,7 +46,7 @@
         }
 
         .profile-username {
-            color: #777;
+            color:cornsilk;
             font-size: 18px;
             margin-bottom: 20px;
         }
@@ -57,14 +60,15 @@
 
         /* Paylaşımlar bölümü */
         .feed {
-            background-color: #f8f8f8;
             padding: 20px;
             border-radius: 10px;
             margin-top: 20px;
+            border-color: black;
+            background-color:#f4f1de;
         }
 
         .feed-item {
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid;
             padding-bottom: 20px;
             margin-bottom: 20px;
         }
@@ -90,7 +94,7 @@
 
             .feed-item-actions a {
                 text-decoration: none;
-                color: #777;
+                color: #fb5607;
                 font-size: 12px;
             }
 
@@ -128,23 +132,47 @@
     <div style="padding-top:100px;">
         <div class="wrapper">
             <div class="form-box login">
-    <div class="profile">
-        <div class="profile-image">
-        <img src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Profil Resmi">
-        </div>
-        <div class="profile-info">
-            <div class="profile-name">@ViewBag.profilAdi</div>
-            <div class="profile-username">@ViewBag.nickName</div>
-            <div class="edit-profile">
-                <a href="#">Profili Düzenle</a>
-            </div>
-        </div>
+                <div class="profile">
+                    <div class="profile-image-container">
+                        <div class="profile-image">
+                            <img src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Profil Resmi">
+                        </div>
+                    </div>
+                    <div class="profile-info">
+                        <div class="profile-name">@ViewBag.profilAdi</div>
+                        <div class="profile-username">@ViewBag.nickName</div>
+                        <div class="edit-profile">
+                            <a href="#">Profili Düzenle</a>
+                            @*<!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Socialla!
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            ...
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>*@
+                        </div>
+                    </div>
                     @foreach (var item in Model)
                     {
                         <div class="feed">
                             <div class="feed-item">
                                 <div class="feed-item-content">
-
                                     @item.Icerik
                                 </div>
                                 <div class="feed-item-actions">
@@ -153,11 +181,10 @@
                                 </div>
                             </div>
                         </div>
-
                     }
-    </div>
-    </div>
-    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
