--- a/SocialMedia/Views/Home/Profil.cshtml
+++ b/SocialMedia/Views/Home/Profil.cshtml
@@ -5,9 +5,7 @@
     <title>Profil</title>
     <!--Style Sheet-->
     <link href="~/stylesheet.css" rel="stylesheet" />
-    <!--Bootstrap CDN-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+   
     <style>
         /* Profil bölümü */
         .profile {
@@ -125,7 +123,7 @@
         </nav>
 
         <nav class="navigation">
-            <a href="/Home/Logout">Çıkış Yap</a>
+            <a href="/Home/Login">Çıkış Yap</a>
         </nav>
     </header>
 
@@ -135,37 +133,13 @@
                 <div class="profile">
                     <div class="profile-image-container">
                         <div class="profile-image">
-                            <img src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Profil Resmi">
+                            <img src="https://avatars.githubusercontent.com/u/117521602?v=4" alt="Profil Resmi">
                         </div>
                     </div>
                     <div class="profile-info">
                         <div class="profile-name">@ViewBag.profilAdi</div>
-                        <div class="profile-username">@ViewBag.nickName</div>
                         <div class="edit-profile">
                             <a href="#">Profili Düzenle</a>
-                            @*<!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Socialla!
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            ...
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>*@
                         </div>
                     </div>
                     @foreach (var item in Model)
