--- a/SocialMedia/wwwroot/StyleSheet.css
+++ b/SocialMedia/wwwroot/StyleSheet.css
@@ -150,7 +150,7 @@ header {
         line-height: 57px;
     }
 
-.btn {
+/*.btn {
     width: 100%;
     height: 45px;
     background: #162938;
@@ -161,4 +161,4 @@ header {
     font-size: 1em;
     color: #fff;
     font-weight: 500;
-}
+}*/
