--- a/SocialMedia/Views/Home/KayitOl.cshtml
+++ b/SocialMedia/Views/Home/KayitOl.cshtml
@@ -12,6 +12,9 @@
     <link href="~/stylesheet.css" rel="stylesheet" />
     <!--FontAwesome CDN-->
     <script src="https://kit.fontawesome.com/d74d237bf1.js" crossorigin="anonymous"></script>
+    <!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Üst Menü-->
@@ -44,7 +47,7 @@
                         <input type="password" name="Sifre" required />
                         <label>Şifre</label>
                     </div>
-                    <button type="submit" class="btn" onclick="alarm()">Kayıt Ol</button>
+                    <button type="submit" class="btn btn-secondary" onclick="alarm()">Kayıt Ol</button>
                 </form>
             </div>
         </div>
