--- a/SocialMedia/Views/Home/Login.cshtml
+++ b/SocialMedia/Views/Home/Login.cshtml
@@ -13,7 +13,9 @@
 	<link href="~/stylesheet.css" rel="stylesheet" />
     <!--FontAwesome CDN-->
     <script src="https://kit.fontawesome.com/d74d237bf1.js" crossorigin="anonymous"></script>
-
+    <!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
         if (@ViewBag.hatali == 1)
         alert("Giriş bilgileri hatalı");
@@ -49,7 +51,7 @@
                     <label>Şifre</label>
                 </div>
 
-                <button type="submit" class="btn">Giriş Yap</button>
+                    <button type="submit" class="btn btn-secondary">Giriş Yap</button>
             </form>
         </div>
     </div>
