--- a/SocialMedia/Views/Home/Profil.cshtml
+++ b/SocialMedia/Views/Home/Profil.cshtml
@@ -5,7 +5,9 @@
     <title>Profil</title>
     <!--Style Sheet-->
     <link href="~/stylesheet.css" rel="stylesheet" />
-   
+    <!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <style>
         /* Profil bölümü */
         .profile {
@@ -127,6 +129,29 @@
         </nav>
     </header>
 
+
+    <form asp-action="#" asp-controller="Home" method="post">
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-floating">
+                            <input type="file" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                        <button type="submit" class="btn btn-primary">Paylaş</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
     <div style="padding-top:100px;">
         <div class="wrapper">
             <div class="form-box login">
@@ -138,9 +163,10 @@
                     </div>
                     <div class="profile-info">
                         <div class="profile-name">@ViewBag.profilAdi</div>
-                        <div class="edit-profile">
-                            <a href="#">Profili Düzenle</a>
-                        </div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-sm edit-profile" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Socialla!
+                        </button>
                     </div>
                     @foreach (var item in Model)
                     {
