--- a/SocialMedia/Views/Home/KayitOl.cshtml
+++ b/SocialMedia/Views/Home/KayitOl.cshtml
@@ -12,18 +12,37 @@
     <link href="~/stylesheet.css" rel="stylesheet" />
     <!--FontAwesome CDN-->
     <script src="https://kit.fontawesome.com/d74d237bf1.js" crossorigin="anonymous"></script>
+    <!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Üst Menü-->
-    <header>
+    @*<header>
         <h2 class="logo" style="text-align:center">Kayıt Ol</h2>
         <nav class="navigation">
             <a href="/Home/Login">Ana Sayfa</a>
         </nav>
-    </header>
+    </header>*@
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="position:absolute;">
+        <div class="container-fluid">
+            <a class="navbar-brand">Kayıt Ol</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Login">Ana Sayfa</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!--Alt Menü-->
     <div style="padding-top:100px;">
-        <div class="wrapper">
+        <div class="container">
             <div class="form-box register">
                 <h2>Kayıt Ol</h2>
                 <form asp-action="KayitOl" asp-controller="Home" method="post">
@@ -44,7 +63,7 @@
                         <input type="password" name="Sifre" required />
                         <label>Şifre</label>
                     </div>
-                    <button type="submit" class="btn" onclick="alarm()">Kayıt Ol</button>
+                    <button type="submit" class="btn btn-secondary" onclick="alarm()">Kayıt Ol</button>
                 </form>
             </div>
         </div>
