--- a/SocialMedia/Views/Home/Profil.cshtml
+++ b/SocialMedia/Views/Home/Profil.cshtml
@@ -5,9 +5,10 @@
     <title>Profil</title>
     <!--Style Sheet-->
     <link href="~/stylesheet.css" rel="stylesheet" />
-   
+    <!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <style>
-        /* Profil bölümü */
         .profile {
             max-width: 800px;
             margin: 20px auto;
@@ -56,7 +57,6 @@
             margin-bottom: 20px;
         }
 
-        /* Paylaşımlar bölümü */
         .feed {
             padding: 20px;
             border-radius: 10px;
@@ -95,26 +95,10 @@
                 color: #fb5607;
                 font-size: 12px;
             }
-
-        /* Düzenleme bölümü */
-        .edit-profile {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-            .edit-profile a {
-                text-decoration: none;
-                background-color: #007bff;
-                color: #fff;
-                padding: 10px 20px;
-                border-radius: 5px;
-                font-size: 14px;
-                font-weight: bold;
-            }
     </style>
 </head>
 <body>
-    <!--Üst Menü-->
+    @*<!--Üst Menü-->
     <header>
         <h2 class="logo" style="text-align:center">Social Media</h2>
 
@@ -125,10 +109,52 @@
         <nav class="navigation">
             <a href="/Home/Login">Çıkış Yap</a>
         </nav>
-    </header>
+    </header>*@
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="position:absolute;">
+        <div class="container-fluid">
+            <a class="navbar-brand">Social Media</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Index">Ana Sayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Login">Çıkış Yap</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <form asp-action="#" asp-controller="Home" method="post">
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-floating">
+                            <input type="file" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                        <button type="submit" class="btn btn-primary">Paylaş</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 
     <div style="padding-top:100px;">
-        <div class="wrapper">
+        <div class="container">
             <div class="form-box login">
                 <div class="profile">
                     <div class="profile-image-container">
@@ -138,9 +164,10 @@
                     </div>
                     <div class="profile-info">
                         <div class="profile-name">@ViewBag.profilAdi</div>
-                        <div class="edit-profile">
-                            <a href="#">Profili Düzenle</a>
-                        </div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary btn-sm edit-profile" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Profil Resmini Değiştir
+                        </button>
                     </div>
                     @foreach (var item in Model)
                     {
