--- a/SocialMedia/Views/Home/KayitOl.cshtml
+++ b/SocialMedia/Views/Home/KayitOl.cshtml
@@ -18,15 +18,31 @@
 </head>
 <body>
     <!--Üst Menü-->
-    <header>
-        <h2 class="logo" style="text-align:center">Kayıt Ol</h2>
-        <nav class="navigation">
-            <a href="/Home/Login">Ana Sayfa</a>
-        </nav>
-    </header>
+    @*<header>
+    <h2 class="logo" style="text-align:center">Kayıt Ol</h2>
+    <nav class="navigation">
+    <a href="/Home/Login">Ana Sayfa</a>
+    </nav>
+    </header>*@
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="position:absolute;">
+        <div class="container-fluid">
+            <a class="navbar-brand">Kayıt Ol</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Login">Ana Sayfa</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!--Alt Menü-->
     <div style="padding-top:100px;">
-        <div class="wrapper">
+        <div class="container">
             <div class="form-box register">
                 <h2>Kayıt Ol</h2>
                 <form asp-action="KayitOl" asp-controller="Home" method="post">
