--- a/SocialMedia/Views/Home/Login.cshtml
+++ b/SocialMedia/Views/Home/Login.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -10,7 +9,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Giriş Yapın</title>
     <!--Style Sheet-->
-	<link href="~/stylesheet.css" rel="stylesheet" />
+    <link href="~/stylesheet.css" rel="stylesheet" />
     <!--FontAwesome CDN-->
     <script src="https://kit.fontawesome.com/d74d237bf1.js" crossorigin="anonymous"></script>
     <!--Bootstrap CDN-->
@@ -18,43 +17,65 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
         if (@ViewBag.hatali == 1)
-        alert("Giriş bilgileri hatalı");
+            alert("Giriş bilgileri hatalı");
     </script>
 
 </head>
 <body>
     <!--Üst Menü-->
-    <header>
-        <h2 class="logo">Social Media</h2>
+    @*<header>
+    <h2 class="logo">Social Media</h2>
 
-        <nav class="navigation">
-            <a href="/Home/Hakkimizda">Hakkımızda</a>
-            <a href="/Home/Iletisim">İletişim</a>
-            <button class="btnLogin-popup" id="btnKayitOl">Kayıt Ol</button>
-        </nav>
-    </header>
+    <nav class="navigation">
+    <a href="/Home/Hakkimizda">Hakkımızda</a>
+    <a href="/Home/Iletisim">İletişim</a>
+    <button class="btnLogin-popup" id="btnKayitOl">Kayıt Ol</button>
+    </nav>
+    </header>*@
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="position:absolute;">
+        <div class="container-fluid">
+            <a class="navbar-brand">Social Media</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Hakkimizda">Hakkımızda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Iletisim">İletişim</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/KayitOl">Kayıt Ol</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!--Alt Menü-->
     <div style="padding-top:100px;">
-    <div class="wrapper">
-        <div class="form-box login">
-            <h2>Giriş Yap</h2>
+        <div class="container">
+            <div class="form-box login">
+                <h2>Giriş Yap</h2>
                 <form asp-action="Login" asp-controller="Home" method="post">
-                <div class="input-box"> 
-                    <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                    <div class="input-box">
+                        <span class="icon"><i class="fa-solid fa-envelope"></i></span>
                         <input name="KullaniciAdi" type="text" />
-                    <label>Kullanıcı Adı</label>
-                </div>
+                        <label>Kullanıcı Adı</label>
+                    </div>
 
-                <div class="input-box">
-                    <span class="icon"><i class="fa-solid fa-lock"></i></span>
+                    <div class="input-box">
+                        <span class="icon"><i class="fa-solid fa-lock"></i></span>
                         <input name="Sifre" type="password" />
-                    <label>Şifre</label>
-                </div>
+                        <label>Şifre</label>
+                    </div>
 
                     <button type="submit" class="btn btn-secondary">Giriş Yap</button>
-            </form>
+                </form>
+            </div>
         </div>
-    </div>
     </div>
 </body>
 </html>
