--- a/SocialMedia/Views/Home/Profil.cshtml
+++ b/SocialMedia/Views/Home/Profil.cshtml
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <style>
-        /* Profil bölümü */
         .profile {
             max-width: 800px;
             margin: 20px auto;
@@ -46,7 +45,7 @@
         }
 
         .profile-username {
-            color:cornsilk;
+            color: cornsilk;
             font-size: 18px;
             margin-bottom: 20px;
         }
@@ -58,13 +57,12 @@
             margin-bottom: 20px;
         }
 
-        /* Paylaşımlar bölümü */
         .feed {
             padding: 20px;
             border-radius: 10px;
             margin-top: 20px;
             border-color: black;
-            background-color:#f4f1de;
+            background-color: #f4f1de;
         }
 
         .feed-item {
@@ -97,37 +95,40 @@
                 color: #fb5607;
                 font-size: 12px;
             }
-
-        /* Düzenleme bölümü */
-        .edit-profile {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-            .edit-profile a {
-                text-decoration: none;
-                background-color: #007bff;
-                color: #fff;
-                padding: 10px 20px;
-                border-radius: 5px;
-                font-size: 14px;
-                font-weight: bold;
-            }
     </style>
 </head>
 <body>
-    <!--Üst Menü-->
+    @*<!--Üst Menü-->
     <header>
-        <h2 class="logo" style="text-align:center">Social Media</h2>
+    <h2 class="logo" style="text-align:center">Social Media</h2>
 
-        <nav class="navigation">
-            <a href="/Home/Index">Ana Sayfa</a>
-        </nav>
+    <nav class="navigation">
+    <a href="/Home/Index">Ana Sayfa</a>
+    </nav>
 
-        <nav class="navigation">
-            <a href="/Home/Login">Çıkış Yap</a>
-        </nav>
-    </header>
+    <nav class="navigation">
+    <a href="/Home/Login">Çıkış Yap</a>
+    </nav>
+    </header>*@
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="position:absolute;">
+        <div class="container-fluid">
+            <a class="navbar-brand">Social Media</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Index">Ana Sayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/Home/Login">Çıkış Yap</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
     <form asp-action="#" asp-controller="Home" method="post">
@@ -153,7 +154,7 @@
     </form>
 
     <div style="padding-top:100px;">
-        <div class="wrapper">
+        <div class="container">
             <div class="form-box login">
                 <div class="profile">
                     <div class="profile-image-container">
@@ -165,7 +166,7 @@
                         <div class="profile-name">@ViewBag.profilAdi</div>
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-primary btn-sm edit-profile" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Socialla!
+                            Profil Resmini Değiştir
                         </button>
                     </div>
                     @foreach (var item in Model)
