--- a/SocialMedia/Views/Home/Index.cshtml
+++ b/SocialMedia/Views/Home/Index.cshtml
@@ -287,7 +287,7 @@
                                     @item.Icerik
                                 </div>
                                 <div class="feed-item-actions">
-                                    <a href="/Home/Like/@item.Id">Beğen</a>
+                                    <a href="/Home/Like/@item.Id">Beğen</a>@item.LikeCount
                                     <!-- Button trigger modal -->
                                     <a class="feedcomment" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                                         Yorum Yap
