--- a/SocialMedia/Views/Home/KayitOl.cshtml
+++ b/SocialMedia/Views/Home/KayitOl.cshtml
@@ -27,12 +27,12 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="position:absolute;">
         <div class="container-fluid">
-            <a class="navbar-brand">Kayıt Ol</a>
+            <a class="navbar-brand">Social Media</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/Home/Login">Ana Sayfa</a>
                     </li>
@@ -40,6 +40,7 @@
             </div>
         </div>
     </nav>
+
     <!--Alt Menü-->
     <div style="padding-top:100px;">
         <div class="container">
