--- a/SocialMedia/Views/Home/Login.cshtml
+++ b/SocialMedia/Views/Home/Login.cshtml
@@ -40,13 +40,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/Home/Hakkimizda">Hakkımızda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/Home/Iletisim">İletişim</a>
-                    </li>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/Home/KayitOl">Kayıt Ol</a>
                     </li>
@@ -54,6 +48,7 @@
             </div>
         </div>
     </nav>
+
     <!--Alt Menü-->
     <div style="padding-top:100px;">
         <div class="container">
